add: new namings

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <body>
 
     <div id="header">
-        <h1>Мой сервис</h1>
+        <h1>Lightnong</h1>
     </div>
 
     <div id="menu">
-        <button class="button" onclick="showForm()">Кнопка 1</button>
-        <button class="button" onclick="showOfferList()">Кнопка 2</button>
-        <button class="button" onclick="showClickerForm()">Кнопка 3</button>
+        <button class="button" onclick="showForm()">Продажа</button>
+        <button class="button" onclick="showOfferList()">Купить</button>
+        <button class="button" onclick="showClickerForm()">Заработать</button>
     </div>
 
     <div id="content" class="form">
