--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Мой сервис</title>
+    <title>Lightning</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
     <div id="header">
-        <h1>Lightnong</h1>
+        <h1>Lightning</h1>
     </div>
 
     <div id="menu">
