add: metamask check

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="header">
         <h1>Lightning</h1>
     </div>
-
+    <p id="message"></p>
     <div id="menu">
         <button class="button" onclick="showForm()">Продажа</button>
         <button class="button" onclick="showOfferList()">Купить</button>
