add: metamask button connect

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <button class="button" onclick="showForm()">Продажа</button>
         <button class="button" onclick="showOfferList()">Купить</button>
         <button class="button" onclick="showClickerForm()">Заработать</button>
+        <button id="connectButton" class="button">Подключить кошелек</button>
     </div>
 
     <div id="content" class="form">
