add: metamask button check

--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
     </div>
     <p id="message"></p>
     <div id="menu">
-        <button class="button" onclick="showForm()">Продажа</button>
-        <button class="button" onclick="showOfferList()">Купить</button>
-        <button class="button" onclick="showClickerForm()">Заработать</button>
-        <button id="connectButton" class="button">Подключить кошелек</button>
+        <div class="left-buttons">
+            <button class="button" onclick="showForm()">Продажа</button>
+            <button class="button" onclick="showOfferList()">Купить</button>
+            <button class="button" onclick="showClickerForm()">Заработать</button>
+        </div>
+        <button id="walletButton" class="button" onclick="connectMetaMask()">Подключить кошелек</button>
     </div>
 
     <div id="content" class="form">
