--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <button class="button" onclick="showOfferList()">Купить</button>
             <button class="button" onclick="showClickerForm()">Заработать</button>
         </div>
-        <button id="walletButton" class="button" onclick="connectMetaMask()"></button>
+        <button id="walletButton" class="button" onclick="connectMetaMask()">Подключить кошелек</button>
     </div>
 
     <div id="content" class="form">
