add: module tag

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.3.6/web3.min.js"
         integrity="sha512-ErA2I1q+6+RXNid+se/9Fl4Kf0Tp8pcRbGKuPC6ebsRxzMGkgaXECbBxh0pjKGrKnDDeNfDnnjfuOFtY6tg6AQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="script.js"></script>
+    <script src="script.js" type="module"></script>
 </body>
 
 </html>
