--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <p>Энергия для продажи: <strong id="clickerAmount">100</strong> кВтч</p>
     </div>
   
-    <script src="script.js" type="module"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
