--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
         <button onclick="increaseEnergy()">Кликай!</button>
         <p>Энергия для продажи: <strong id="clickerAmount">100</strong> кВтч</p>
     </div>
-  
-    <script src="script.js"></script>
+
+    <script src="dist/bundle.js"></script>
+
 </body>
 
 </html>
