--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
         <p>Энергия для продажи: <strong id="clickerAmount">100</strong> кВтч</p>
     </div>
 
-    <script src="dist/bundle.js"></script>
     <script src="script.js"></script>
+    <script src="meta.js" type="module"></script>
 </body>
 
 </html>
