--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <p id="message"></p>
     <div id="menu">
         <div class="left-buttons">
-            <button id="button1" class="button" onclick="showForm()">Продажа</button>
-            <button id="button2" class="button" onclick="showOfferList()">Купить</button>
-            <button id="button3" class="button" onclick="showClickerForm()">Заработать</button>
+            <button id="button1" class="button">Продажа</button>
+            <button id="button2" class="button">Купить</button>
+            <button id="button3" class="button">Заработать</button>
         </div>
         <button id="walletButton" class="button">Подключить кошелек</button>
     </div>
