--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <p id="message"></p>
     <div id="menu">
         <div class="left-buttons">
-            <button id="button1" class="button">Продажа</button>
-            <button id="button2" class="button">Купить</button>
-            <button id="button3" class="button">Заработать</button>
+            <button id="sellFormButton" class="button">Продажа</button>
+            <button id="buyFormButton" class="button">Купить</button>
+            <button id="earnFormButton" class="button">Заработать</button>
         </div>
         <button id="walletButton" class="button">Подключить кошелек</button>
     </div>
@@ -32,7 +32,7 @@
             <label for="price">Введите стоимость за кВтч:</label>
             <input type="number" id="price" name="price" placeholder="Введите стоимость за кВтч...">
             <br>
-            <button type="submit" id="sell-button" onclick="sellEnergy(event)">Продать</button>
+            <button id="sell-button">Продать</button>
         </form>
     </div>
 
@@ -56,7 +56,7 @@
 
     <div id="clickerForm" class="form">
         <h2>Кликер для увеличения энергии</h2>
-        <button onclick="increaseEnergy()">Кликай!</button>
+        <button id="earnButton">Кликай!</button>
         <p>Энергия для продажи: <strong id="clickerAmount">100</strong> кВтч</p>
     </div>
 
