fix: sell button id

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <label for="price">Введите стоимость за кВтч:</label>
             <input type="number" id="price" name="price" placeholder="Введите стоимость за кВтч...">
             <br>
-            <button id="sell-button">Продать</button>
+            <button id="sellButton">Продать</button>
         </form>
     </div>
 
