--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             <label for="price">Введите стоимость за кВтч:</label>
             <input type="number" id="price" name="price" placeholder="Введите стоимость за кВтч...">
             <br>
-            <button id="sellButton">Продать</button>
         </form>
+        <button id="sellButton" class="button">Продать</button>
     </div>
 
     <div id="offer-list" class="form">
